Address issued identified by static analysis.
Refs #96440